--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,19 @@
+@article{cheng2025harnessing,
+  author = {Olivia J Cheng* and TTT Tran* and Y Ann Chen and Aik Choon Tan},
+  title = {Harnessing Single-Cell RNA-Seq for Computational Drug Repurposing in Cancer Immunotherapy},
+  journal = {Pharmaceuticals},
+  year = {2025},
+  selected = {true}
+}
+
+@article{phadke2025identification,
+  author = {Manali S Phadke and Jiannong Li and Sathya Sriramareddy and Paulo C Rodriguez and Brian Ruffell and Vincent C Luca and Thuy TT Tran and Yian Ann Chen and Keiran SM Smalley},
+  title = {Identification of anti-TIM-3 based checkpoint inhibitor combinations with activity in immunotherapy refractory melanoma models},
+  journal = {Journal for Immunotherapy of Cancer},
+  year = {2025},
+  selected = {true}
+}
+
 @inproceedings{tran2020bidirectional,
   author = {Thuy T. T. Tran and J. Peetakul and C. D. K. Pham and J. Zhou},
   title = {Bi-directional intra prediction-based measurement coding for compressive sensing images},
